# nrf-hal

./: CHANGELOG.md  Cargo.toml
boards/nordic_nrf52840dk/: Cargo.toml
boards/nordic_nrf52840dk/examples/: blinky.rs  temp.rs
boards/nordic_nrf52840dk/src/: lib.rs  temperature.rs
nrf-hal-common/src/: ppi.rs  saadc.rs  spim.rs  spis.rs
nrf-hal-common/src/ppi/: event_nrf52832.rs  event_nrf9160.rs  mod.rs  task_nrf52832.rs  task_nrf9160.rs
nrf52-hal-common/: Cargo.toml
nrf52-hal-common/src/: lib.rs  uarte.rs  uarte_stream.rs
