[package]
name = "nordic_nrf52840dk"
authors = ["John Scarrott <john.scarrott@beraninstruments.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Support for Adafruit nRF52840 development kit"
keywords = ["arm", "cortex-m", "nrf52840", "hal"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/nrf-rs/nrf52"
version = "0.0.1"

[dependencies]
nrf52840-hal = { path = "../../nrf52840-hal" }
cortex-m = "0.5.4"
cortex-m-rt = "~0.5"
nb = "~0.1"
cortex-m-semihosting = "~0.3"
panic-semihosting = "~0.3"

[dev-dependencies]


[features]
rt = ["nrf52840-hal/rt"]
default = ["rt"]
